--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,58 @@
-/* Acá va tu código */
+/* DISPLAY DE LAS PÁGINAS */
+.hide {
+  display:none;
+}
+
+/*TÍTULO PERMANENTE*/  
+h1 {
+  line-height: 0%;
+  font-size: 80px;
+}
+h2 {
+  line-height: 0%
+}
+.contain {
+background: url("https://static.guiainfantil.com/uploads/ocio/medusa-p.jpg") no-repeat center; 
+background-size: cover;
+height: 150px;
+position: relative;
+}
+.permanent {
+text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: black;
+}
+
+
+/*CUERPO*/
+body {  
+ text-align: center;
+background-image: url("blob:https://web.whatsapp.com/d258a4b4-773c-4773-8858-305cece1aa27");
+  font-family: 'Permanent Marker', cursive;
+  font-size: 55px;
+
+  font-family: 'Overpass', sans-serif;
+  font-size: 20px;
+}
+      
+  
+  /*BOTONES (CONFIGURACIÓN DE ESTILO)*/
+  .button {
+    font-family: 'Overpass', sans-serif;
+    font-size: 20px;
+    background-color:  #3e8e41;
+    border-radius: 8px; 
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
+    border: 1px solid black;
+    opacity: 0.86;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+ }
+ .button:hover {opacity: 1}
+}
+
